Edit experience block

--- a/index.html
+++ b/index.html
@@ -156,28 +156,69 @@
 
         <section class="experience" id="experience">
             <h2 class="section-title" data-i18n="experience.title">Опыт работы</h2>
-            <div class="timeline">
-                <div class="timeline-item fade-in">
-                    <div class="timeline-date">Now</div>
-                    <div class="timeline-content">
-                        <h3 data-i18n="experience.trucker.title">Backend Developer</h3>
-                        <div class="company" data-i18n="experience.trucker.company">Trucker</div>
+            <div class="experience-timeline">
+                <div class="experience-item fade-in">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.trucker.title">Backend Developer</h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.trucker">Декабрь 2024 — настоящее время</span>
+                                <span class="duration-badge" data-i18n="experience.durations.trucker">11 месяцев</span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.trucker.company">Trucker</div>
                     </div>
                 </div>
-                
-                <div class="timeline-item fade-in delay-1">
-                    <div class="timeline-date">Now</div>
-                    <div class="timeline-content">
-                        <h3 data-i18n="experience.jammer.title">Fullstack Developer & Co-founder</h3>
-                        <div class="company" data-i18n="experience.jammer.company">Jammer</div>
+
+                <div class="experience-item fade-in delay-1">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.jammer.title">Fullstack Developer & Co-founder</h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.jammer">Июль 2024 — настоящее время</span>
+                                <span class="duration-badge" data-i18n="experience.durations.jammer">1 год 4 месяца</span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.jammer.company">Jammer</div>
                     </div>
                 </div>
-                
-                <div class="timeline-item fade-in delay-2">
-                    <div class="timeline-date">2024</div>
-                    <div class="timeline-content">
-                        <h3 data-i18n="experience.viomitra.title">Frontend Developer</h3>
-                        <div class="company" data-i18n="experience.viomitra.company">VioMitra</div>
+
+                <div class="experience-item fade-in delay-2">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.elina.title">Fullstack Developer</h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.elina">Август 2025 — настоящее время</span>
+                                <span class="duration-badge" data-i18n="experience.durations.elina">Продолжаю работу</span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.elina.company">ГК "Элина"</div>
+                    </div>
+                </div>
+
+                <div class="experience-item fade-in delay-3">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.purmarili.title">Fullstack Developer</h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.purmarili">Май 2024 — настоящее время</span>
+                                <span class="duration-badge" data-i18n="experience.durations.purmarili">1 год 1 месяц</span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.purmarili.company">Пурмарили</div>
+                    </div>
+                </div>
+
+                <div class="experience-item fade-in delay-4">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.viomitra.title">Frontend Developer</h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.viomitra">Июль 2023 — Декабрь 2024</span>
+                                <span class="duration-badge" data-i18n="experience.durations.viomitra">1 год 6 месяцев</span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.viomitra.company">VioMitra</div>
                     </div>
                 </div>
             </div>
