Fix trucker logo background + Replace purmarili logo

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 </div>
                 
                 <div class="project-card">
-                    <div class="project-img">
-                        <img class="prg_img" src="/assets/images/trucker.png">
+                    <div class="project-img background_black">
+                        <img class="prg_img background_black" src="/assets/images/trucker.png">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title" data-i18n="projects.trucker.title">Trucker</h3>
@@ -126,7 +126,7 @@
 
             <div class="projects-grid projects-grid-two-inline projects-grid-second-line">
                 <div class="project-card">
-                    <div class="project-img">
+                    <div class="project-img purmarili-rnd-style-png">
                         <img class="prg_img" src="/assets/images/purmarili.png">
                     </div>
                     <div class="project-content">
