Fix trucker block styles

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="project-img background_black">
                         <img class="prg_img background_black" src="/assets/images/trucker.png">
                     </div>
-                    <div class="project-content">
+                    <div class="project-content background_black">
                         <h3 class="project-title" data-i18n="projects.trucker.title">Trucker</h3>
                         <p class="project-description" data-i18n="projects.trucker.description">Работа над клиентскими конфигурациями в команде Customer Technologies Team. Разработка и поддержка backend-части проектов.</p>
                         <div class="project-tech">
