Edit info on main page about Jammer

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.jammer.title">Fullstack Developer & Co-founder</h3>
+                            <h3 class="experience-role" data-i18n="experience.jammer.title">CEO & Fullstack Developer</h3>
                             <div class="experience-date">
                                 <span class="date-range" data-i18n="experience.dateRanges.jammer">Июль 2024 — настоящее время</span>
                                 <span class="duration-badge" data-i18n="experience.durations.jammer"></span>
