Add Hotwire to skills

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                         <div class="skill-tag">MySQL</div>
                         <div class="skill-tag">Redis</div>
                         <div class="skill-tag">Sidekiq</div>
+                        <div class="skill-tag">Hotwire Turbo</div>
+                        <div class="skill-tag">Hotwire Stimulus</div>
                         <div class="skill-tag">ASP.NET</div>
                         <div class="skill-tag">RSpec</div>
                         <div class="skill-tag">Git</div>
@@ -81,6 +83,8 @@
                             <span class="tech-tag">Ruby</span>
                             <span class="tech-tag">Ruby-on-Rails</span>
                             <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Hotwire Turbo</span>
+                            <span class="tech-tag">Hotwire Stimulus</span>
                             <span class="tech-tag">PostgreSQL</span>
                             <span class="tech-tag">TailwindCSS</span>
                         </div>
