Add target="_blank" to links

--- a/index.html
+++ b/index.html
@@ -236,19 +236,19 @@
             <div class="contact-content">
                 <p data-i18n="contact.description">Всегда открыт к новым возможностям и интересным проектам. Свяжитесь со мной, и мы обсудим, как я могу помочь в реализации ваших идей.</p>
                 <div class="contact-links">
-                    <a href="mailto:vgorbanev@sfedu.ru" class="contact-link">
+                    <a href="mailto:vgorbanev@sfedu.ru" target="_blank" class="contact-link">
                         <i class="fas fa-envelope"></i>
                         <span>vgorbanev@sfedu.ru</span>
                     </a>
-                    <a href="tel:+79897107783" class="contact-link">
+                    <a href="tel:+79897107783" target="_blank" class="contact-link">
                         <i class="fas fa-phone"></i>
                         <span>+7 989 710-77-83</span>
                     </a>
-                    <a href="https://github.com/vgartg" class="contact-link">
+                    <a href="https://github.com/vgartg" target="_blank" class="contact-link">
                         <i class="fab fa-github"></i>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://t.me/vgartg" class="contact-link">
+                    <a href="https://t.me/vgartg" target="_blank" class="contact-link">
                         <i class="fab fa-telegram"></i>
                         <span>Telegram</span>
                     </a>
