Add cursor-dot and some styles for this

--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
 
     <div id="footer"></div>
 
+    <div id="cursor-circle"></div>
+    <div id="cursor-dot"></div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
