--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 </div>
                 
                 <div class="project-card">
-                    <div class="project-img background_black">
-                        <img class="prg_img background_black" src="/assets/images/trucker.png">
+                    <div class="project-img">
+                        <img class="prg_img" src="/assets/images/trucker.png">
                     </div>
-                    <div class="project-content background_black">
+                    <div class="project-content">
                         <h3 class="project-title" data-i18n="projects.trucker.title">Trucker</h3>
                         <p class="project-description" data-i18n="projects.trucker.description">Работа над клиентскими конфигурациями в команде Customer Technologies Team. Разработка и поддержка backend-части проектов.</p>
                         <div class="project-tech">
