Add block with Jammer company details

--- a/index.html
+++ b/index.html
@@ -79,6 +79,44 @@
                     <div class="project-content">
                         <h3 class="project-title" data-i18n="projects.jammer.title">Jammer</h3>
                         <p class="project-description" data-i18n="projects.jammer.description">Платформа для независимых разработчиков игр, аналог itch.io. Полнофункциональный маркетплейс с системой загрузки, продажи и рецензирования игр.</p>
+                        
+                        <div class="requisites-container">
+                            <button class="requisites-toggle" type="button">
+                                <i class="fas fa-building"></i>
+                                <span data-i18n="projects.jammer.requisites">Детали организации</span>
+                                <i class="fas fa-chevron-down requisites-chevron"></i>
+                            </button>
+                            <div class="requisites-content">
+                                <div class="requisites-list">
+                                    <div class="requisites-item">
+                                        <span class="requisites-label" data-i18n="projects.jammer.role">Учредитель</span>
+                                        <span class="requisites-value" data-i18n="projects.jammer.fio">Горбанёв В.О.</span>
+                                    </div>
+                                    <div class="requisites-item">
+                                        <span class="requisites-label" data-i18n="projects.jammer.inn">ИНН</span>
+                                        <button class="requisites-value copy-btn" data-value="6154170405" data-copy-text="ИНН скопирован">
+                                            6154170405
+                                            <i class="fas fa-copy copy-icon"></i>
+                                        </button>
+                                    </div>
+                                    <div class="requisites-item">
+                                        <span class="requisites-label" data-i18n="projects.jammer.kpp">КПП</span>
+                                        <button class="requisites-value copy-btn" data-value="615401001" data-copy-text="КПП скопирован">
+                                            615401001
+                                            <i class="fas fa-copy copy-icon"></i>
+                                        </button>
+                                    </div>
+                                    <div class="requisites-item">
+                                        <span class="requisites-label" data-i18n="projects.jammer.ogrn">ОГРН</span>
+                                        <button class="requisites-value copy-btn" data-value="1256100025609" data-copy-text="ОГРН скопирован">
+                                            1256100025609
+                                            <i class="fas fa-copy copy-icon"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         <div class="project-tech">
                             <span class="tech-tag">Ruby</span>
                             <span class="tech-tag">Ruby-on-Rails</span>
