--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <div class="skill-tag">Ruby-on-Rails</div>
                         <div class="skill-tag">JavaScript</div>
                         <div class="skill-tag">TypeScript</div>
+                        <div class="skill-tag">Python</div>
                         <div class="skill-tag">React</div>
                         <div class="skill-tag">PostgreSQL</div>
                         <div class="skill-tag">MySQL</div>
@@ -57,6 +58,8 @@
                         <div class="skill-tag">ASP.NET</div>
                         <div class="skill-tag">RSpec</div>
                         <div class="skill-tag">Git</div>
+                        <div class="skill-tag">GitHub</div>
+                        <div class="skill-tag">GitLab</div>
                         <div class="skill-tag">Bootstrap</div>
                         <div class="skill-tag">TailwindCSS</div>
                     </div>
@@ -125,6 +128,8 @@
                             <span class="tech-tag">Hotwire Stimulus</span>
                             <span class="tech-tag">PostgreSQL</span>
                             <span class="tech-tag">TailwindCSS</span>
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">GitHub</span>
                         </div>
                     </div>
                 </div>
@@ -134,8 +139,8 @@
                         <img class="prg_img" src="/assets/images/trucker.png">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title" data-i18n="projects.trucker.title">Trucker</h3>
-                        <p class="project-description" data-i18n="projects.trucker.description">Работа над клиентскими конфигурациями в команде Customer Technologies Team. Разработка и поддержка backend-части проектов.</p>
+                        <h3 class="project-title" data-i18n="projects.trucker.title"></h3>
+                        <p class="project-description" data-i18n="projects.trucker.description"></p>
                         <div class="project-tech">
                             <span class="tech-tag">Ruby</span>
                             <span class="tech-tag">Ruby-on-Rails</span>
@@ -143,6 +148,8 @@
                             <span class="tech-tag">Sidekiq</span>
                             <span class="tech-tag">Redis</span>
                             <span class="tech-tag">RSpec</span>
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">GitLab</span>
                         </div>
                     </div>
                 </div>
@@ -152,7 +159,7 @@
                         <img class="prg_img" src="/assets/images/viomitra.png">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title" data-i18n="projects.viomitra.title">VioMitra</h3>
+                        <h3 class="project-title" data-i18n="projects.viomitra.title"></h3>
                         <p class="project-description" data-i18n="projects.viomitra.description"></p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
@@ -161,19 +168,21 @@
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">TypeScript</span>
                             <span class="tech-tag">Bootstrap</span>
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">GitHub</span>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="projects-grid projects-grid-two-inline projects-grid-second-line">
+            <div class="projects-grid" style="margin-top: 50px;">
                 <div class="project-card">
                     <div class="project-img purmarili-rnd-style-png">
                         <img class="prg_img" src="/assets/images/purmarili.png">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title" data-i18n="projects.purmarili.title">Пурмарили</h3>
-                        <p class="project-description" data-i18n="projects.purmarili.description">Веб-приложение для сети ресторанов в Ростове-на-Дону. Включает кастомную административную панель для управления контентом.</p>
+                        <h3 class="project-title" data-i18n="projects.purmarili.title"></h3>
+                        <p class="project-description" data-i18n="projects.purmarili.description"></p>
                         <div class="project-tech">
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">PHP</span>
@@ -187,12 +196,31 @@
                         <img class="prg_img" src="/assets/images/gk_elina.png">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title" data-i18n="projects.elina.title">ГК "Элина"</h3>
-                        <p class="project-description" data-i18n="projects.elina.description">Веб-приложение для продажи недвижимости в Ростовской области и новых республиках. Система фильтрации, карты, административная панель.</p>
+                        <h3 class="project-title" data-i18n="projects.elina.title"></h3>
+                        <p class="project-description" data-i18n="projects.elina.description"></p>
                         <div class="project-tech">
                             <span class="tech-tag">Java</span>
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">GitHub</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-img">
+                        <img class="prg_img" src="/assets/images/prostor.png">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title" data-i18n="projects.prostor.title"></h3>
+                        <p class="project-description" data-i18n="projects.prostor.description"></p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">GitHub</span>
                         </div>
                     </div>
                 </div>
@@ -200,70 +228,83 @@
         </section>
 
         <section class="experience" id="experience">
-            <h2 class="section-title" data-i18n="experience.title">Опыт работы</h2>
+            <h2 class="section-title" data-i18n="experience.title"></h2>
             <div class="experience-timeline">
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.trucker.title">Backend Developer</h3>
+                            <h3 class="experience-role" data-i18n="experience.trucker.title"></h3>
                             <div class="experience-date">
-                                <span class="date-range" data-i18n="experience.dateRanges.trucker">Декабрь 2024 — настоящее время</span>
+                                <span class="date-range" data-i18n="experience.dateRanges.trucker"></span>
                                 <span class="duration-badge" data-i18n="experience.durations.trucker"></span>
                             </div>
                         </div>
-                        <div class="experience-company" data-i18n="experience.trucker.company">Trucker</div>
+                        <div class="experience-company" data-i18n="experience.trucker.company"></div>
                     </div>
                 </div>
 
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.jammer.title">CEO & Fullstack Developer</h3>
+                            <h3 class="experience-role" data-i18n="experience.jammer.title"></h3>
                             <div class="experience-date">
-                                <span class="date-range" data-i18n="experience.dateRanges.jammer">Июль 2024 — настоящее время</span>
+                                <span class="date-range" data-i18n="experience.dateRanges.jammer"></span>
                                 <span class="duration-badge" data-i18n="experience.durations.jammer"></span>
                             </div>
                         </div>
-                        <div class="experience-company" data-i18n="experience.jammer.company">Jammer</div>
+                        <div class="experience-company" data-i18n="experience.jammer.company"></div>
                     </div>
                 </div>
 
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.elina.title">Fullstack Developer</h3>
+                            <h3 class="experience-role" data-i18n="experience.elina.title"></h3>
                             <div class="experience-date">
-                                <span class="date-range" data-i18n="experience.dateRanges.elina">Август 2025 — настоящее время</span>
+                                <span class="date-range" data-i18n="experience.dateRanges.elina"></span>
                                 <span class="duration-badge" data-i18n="experience.durations.elina"></span>
                             </div>
                         </div>
-                        <div class="experience-company" data-i18n="experience.elina.company">ГК "Элина"</div>
+                        <div class="experience-company" data-i18n="experience.elina.company"></div>
                     </div>
                 </div>
 
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.purmarili.title">Fullstack Developer</h3>
+                            <h3 class="experience-role" data-i18n="experience.prostor.title"></h3>
                             <div class="experience-date">
-                                <span class="date-range" data-i18n="experience.dateRanges.purmarili">Май 2024 — Сентябрь 2024</span>
+                                <span class="date-range" data-i18n="experience.dateRanges.prostor"></span>
+                                <span class="duration-badge" data-i18n="experience.durations.prostor"></span>
+                            </div>
+                        </div>
+                        <div class="experience-company" data-i18n="experience.prostor.company"></div>
+                    </div>
+                </div>
+
+                <div class="experience-item">
+                    <div class="experience-card">
+                        <div class="experience-header">
+                            <h3 class="experience-role" data-i18n="experience.purmarili.title"></h3>
+                            <div class="experience-date">
+                                <span class="date-range" data-i18n="experience.dateRanges.purmarili"></span>
                                 <span class="duration-badge" data-i18n="experience.durations.purmarili"></span>
                             </div>
                         </div>
-                        <div class="experience-company" data-i18n="experience.purmarili.company">Пурмарили</div>
+                        <div class="experience-company" data-i18n="experience.purmarili.company"></div>
                     </div>
                 </div>
 
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-role" data-i18n="experience.viomitra.title">Frontend Developer</h3>
+                            <h3 class="experience-role" data-i18n="experience.viomitra.title"></h3>
                             <div class="experience-date">
-                                <span class="date-range" data-i18n="experience.dateRanges.viomitra">Июль 2023 — Декабрь 2024</span>
+                                <span class="date-range" data-i18n="experience.dateRanges.viomitra"></span>
                                 <span class="duration-badge" data-i18n="experience.durations.viomitra"></span>
                             </div>
                         </div>
-                        <div class="experience-company" data-i18n="experience.viomitra.company">VioMitra</div>
+                        <div class="experience-company" data-i18n="experience.viomitra.company"></div>
                     </div>
                 </div>
             </div>
