--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <div class="skill-tag">JavaScript</div>
                         <div class="skill-tag">TypeScript</div>
                         <div class="skill-tag">Python</div>
+                        <div class="skill-tag">C</div>
+                        <div class="skill-tag">C#</div>
+                        <div class="skill-tag">C++</div>
                         <div class="skill-tag">React</div>
                         <div class="skill-tag">PostgreSQL</div>
                         <div class="skill-tag">MySQL</div>
