Change typing animation and some other edits like change default lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +19,17 @@
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
-                <h1 class="fade-in"><span data-i18n="hero.greeting">Привет, я</span> <span class="gradient-text" data-i18n="hero.name">Валерий</span><br><span data-i18n="hero.title">Fullstack разработчик</span></h1>
+                <div class="brand-mark fade-in" data-i18n="hero.brand"></div>
+                <h1 class="fade-in"><span data-i18n="hero.title"></span></h1>
                 <div class="typing-text fade-in delay-1">
-                    <span data-i18n="hero.typing_first">Создаю </span>
-                    <span class="static-text" data-i18n="hero.typing_between">digital-продукты</span>
-                    <span  data-i18n="hero.typing_second"> с помощью</span> <span class="changing-tech"></span>
+                    <span class="static-text" data-i18n="hero.typing_first"></span>
+                    <span class="changing-tech"></span>
                 </div>
-                <p class="fade-in delay-2" data-i18n="hero.description">Превращаю сложные идеи в элегантные и функциональные решения. Более 2 лет опыта в веб-разработке.</p>
+                <p class="fade-in delay-2" data-i18n="hero.description"></p>
+                <p class="fade-in delay-2" data-i18n="hero.second_description"></p>
                 <div class="btn-container fade-in delay-3">
-                    <a href="#projects" class="btn" data-i18n="hero.projects">Мои проекты</a>
-                    <a href="#contact" class="btn btn-secondary" data-i18n="hero.contact">Связаться со мной</a>
+                    <a href="#projects" class="btn" data-i18n="hero.projects"></a>
+                    <a href="#contact" class="btn btn-secondary" data-i18n="hero.contact"></a>
                 </div>
             </div>
         </section>
